Fixed bg image dark mode.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11864,20 +11864,39 @@ body {
   font-size: 1.6rem;
 }
 
+footer::first-line {
+  color: rgb(255, 0, 89);
+}
+
 #icon {
   cursor: pointer;
   height: 25px;
   width: 25px;
 }
 
+.darkmode {
+  background-color: rgba(18, 18, 18, 0.7);
+  background-blend-mode: darken;
+  color: rgba(255, 255, 255, 0.87);
+}
+.darkmode .school-name {
+  color: rgba(255, 255, 255, 0.87);
+}
+.darkmode .navbar-toggler {
+  background: rgba(255, 255, 255, 0.4);
+}
+.darkmode .banner {
+  background-color: rgba(18, 18, 18, 0.7);
+  background-blend-mode: darken;
+}
+
 /* Banner styling */
 .banner {
+  background-image: url("../../assets/images/school-banner.jpg");
   background-position: center;
   border-radius: 10px;
-  background-size: cover;
+  background-size: 100% 100%;
   height: 300px;
-  width: 100%;
-  position: relative;
   animation-name: zoom-in;
   animation-duration: 3s;
   animation-delay: 1s;
@@ -11896,18 +11915,6 @@ body {
     opacity: 1;
   }
 }
-.darkmode {
-  background-color: rgba(18, 18, 18, 0.7);
-  background-blend-mode: darken;
-  color: rgba(255, 255, 255, 0.87);
-}
-.darkmode .school-name {
-  color: rgba(255, 255, 255, 0.87);
-}
-.darkmode .navbar-toggler {
-  background: rgba(255, 255, 255, 0.4);
-}
-
 .school-name {
   font-size: 1.6rem;
 }
