--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -52,20 +52,42 @@ body {
   font-size: 1.6rem;
 }
 
+footer::first-line {
+  color: rgb(255, 0, 89);
+}
+
 #icon {
   cursor: pointer;
   height: 25px;
   width: 25px;
 }
 
+.darkmode {
+  background-color: rgba(#121212, 0.7);
+  background-blend-mode: darken;
+  color: rgba(#ffffff, 0.87);
+
+  .school-name {
+    color: rgba(#ffffff, 0.87);
+  }
+
+  .navbar-toggler {
+    background: rgba(255, 255, 255, 0.4);
+  }
+
+  .banner {
+    background-color: rgba(#121212, 0.7);
+    background-blend-mode: darken;
+  }
+}
+
 /* Banner styling */
 .banner {
+  background-image: url("../../assets/images/school-banner.jpg");
   background-position: center;
   border-radius: 10px;
-  background-size: cover;
+  background-size: 100% 100%;
   height: 300px;
-  width: 100%;
-  position: relative;
   animation-name: zoom-in;
   animation-duration: 3s;
   animation-delay: 1s;
@@ -82,20 +104,6 @@ body {
   to {
     transform: scale(1);
     opacity: 1;
-  }
-}
-
-.darkmode {
-  background-color: rgba(#121212, 0.7);
-  background-blend-mode: darken;
-  color: rgba(#ffffff, 0.87);
-
-  .school-name {
-    color: rgba(#ffffff, 0.87);
-  }
-
-  .navbar-toggler {
-    background: rgba(255, 255, 255, 0.4);
   }
 }
 
